# Big-Bear-AI

./: .env.example  .gitignore  README.md  langgraph.json  openapi.json  pyproject.toml  start.ps1  start__inmem.py  start_postgres.py  stop.ps1
Frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js  vite.config.test.js  vitest.config.js
Frontend/e2e/: app.spec.js
Frontend/src/: App.vue  main.js
Frontend/src/api/: auth.js  auth.test.js  langgraph.js  langgraph.test.js  resources.js  resources.test.js
Frontend/src/assets/css/: components.css  home.css  layout.css  style.css
Frontend/src/components/: AppModal.vue  ResourceCatalogPage.test.js  ResourceCatalogPage.vue  Sidebar.vue  UnifiedCard.test.js  UnifiedCard.vue
Frontend/src/data/: data.js
Frontend/src/router/: index.js
Frontend/src/views/: Agents.test.js  Agents.vue  Auth.vue  Home.test.js  Home.vue  Knowledge.test.js  Knowledge.vue  MCP.test.js  MCP.vue  Plugins.test.js  Plugins.vue  Prompt.test.js  Prompt.vue  Rules.test.js  Rules.vue
Prototype/: agents.html  index.html  knowledge.html  mcp.html  plugins.html  prompt.html  rules.html
Prototype/css/: components.css  home.css  layout.css  style.css
Prototype/js/: app.js  data.js  render.js
backend/: README.md  pyproject.toml
backend/scripts/: smoke_assistant.py  smoke_langgraph.py
backend/src/big_bear_ai/: __init__.py  config.py  database.py  models.py
backend/src/big_bear_ai/auth/: __init__.py  http.py  langgraph.py  service.py
backend/src/big_bear_ai/graphs/: __init__.py  assistant.py  management.py
backend/src/big_bear_ai/langgraph_postgres_patch/: __init__.py  checkpoint.py  database.py  lifespan.py  metrics.py  ops.py  queue.py  redis.py  retry.py  store.py
backend/src/big_bear_ai/repositories/: resources.py
backend/src/big_bear_ai/services/: assistant_context.py  documents.py  management.py  mcp.py  plugins.py
backend/src/big_bear_ai/tools/: __init__.py  application.py
backend/src/langgraph_runtime_postgres_local/: __init__.py
backend/tests/: conftest.py  test_assistant_graph.py  test_auth_service.py  test_config.py  test_database.py  test_documents.py  test_langgraph_config.py  test_management_graph.py  test_mcp.py  test_plugins.py  test_postgres_runtime_contract.py  test_repositories.py  test_startup_scripts.py
docs/superpowers/specs/: 2026-07-17-langgraph-backend-design.md
src/: __init__.py  user_auth_testing.py
src/agent/: __init__.py  example.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py  auth.py
src/app/db/: __init__.py  database.py
src/app/models/: __init__.py  user.py
src/app/schemas/: __init__.py  auth.py
src/app/services/: __init__.py  auth_service.py
src/langgraph_server_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/security/: __init__.py  auth.py
storage/migrations/: 0001_langgraph_runtime.up.sql  0002_cron_schedule_fields.up.sql  0003_users.up.sql
