[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "big-bear-ai-backend"
version = "0.1.0"
description = "LangGraph backend for Big Bear AI"
requires-python = ">=3.11,<4"
dependencies = [
  "deepagents>=0.6.12,<0.7",
  "jsonschema>=4.24,<5",
  "langchain>=1.3.13,<2",
  "langchain-google-genai>=4.2.6,<5",
  "langchain-mcp-adapters>=0.3.0,<0.4",
  "langgraph>=1.2.6,<2",
  "mcp>=1.28.1,<2",
  "pypdf>=6.14.2,<7",
  "python-docx>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "anyio>=4.5,<5",
  "httpx>=0.28,<0.29",
  "langgraph-api>=0.11,<0.12",
  "langgraph-cli[inmem]>=0.4.30,<0.5",
  "langgraph-sdk>=0.4.2,<0.5",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.4,<2",
  "reportlab>=5,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/big_bear_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
